# ofxGgmlMusic

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
docs/: ARCHITECTURE.md  MUSIC_WORKFLOWS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md
docs/releases/: v1.0.1.md
lib/acestep/: README.md
libs/acestep/: README.md
ofxGgmlMusicAceStepExample/: README.md  addons.make
ofxGgmlMusicAceStepExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgmlMusicAnalysisExample/: README.md  addons.make
ofxGgmlMusicAnalysisExample/src/: ofApp.cpp  ofApp.h
ofxGgmlMusicGenerationExample/: README.md
ofxGgmlMusicGenerationExample/src/: ofApp.cpp  ofApp.h
scripts/: build-music-example.bat  build-music-example.ps1  build-music-example.sh  doctor-music.bat  doctor-music.ps1  doctor-music.sh  generate-external-music.bat  generate-external-music.ps1  generate-external-music.sh  generate-musicgen-hf.bat  generate-musicgen-hf.ps1  generate-musicgen-hf.sh  generate-procedural-music.bat  generate-procedural-music.ps1  generate-procedural-music.sh  release-candidate.ps1  run-music-runtime-smoke.bat  run-music-runtime-smoke.ps1  run-music-runtime-smoke.sh  run-musicgen-hf.bat  run-musicgen-hf.sh  setup-acestep-server.bat  setup-acestep-server.ps1  setup-acestep-server.sh  start-acestep-server.bat  start-acestep-server.ps1  start-acestep-server.sh  test-acestep-server-dry-run.bat  test-acestep-server-dry-run.ps1  test-acestep-server-dry-run.sh  test-acestep-setup-dry-run.bat  test-acestep-setup-dry-run.ps1  test-acestep-setup-dry-run.sh  test-addon.ps1  test-doctor-music.ps1  test-example-project-repair.ps1  test-external-generation-contract.bat  test-external-generation-contract.ps1  test-external-generation-contract.sh  test-music-runtime-smoke.ps1  (+1 more)
src/: ofxGgmlMusic.h  ofxGgmlMusicVersion.h
src/ofxGgmlMusic/: ofxGgmlMusicAceStepBridge.cpp  ofxGgmlMusicAceStepBridge.h  ofxGgmlMusicAudioUtils.cpp  ofxGgmlMusicAudioUtils.h  ofxGgmlMusicExternalGenerationBackend.cpp  ofxGgmlMusicExternalGenerationBackend.h  ofxGgmlMusicGenerationBackend.cpp  ofxGgmlMusicGenerationBackend.h  ofxGgmlMusicMidiUtils.cpp  ofxGgmlMusicMidiUtils.h  ofxGgmlMusicProceduralGenerationBackend.cpp  ofxGgmlMusicProceduralGenerationBackend.h  ofxGgmlMusicTypes.h  ofxGgmlMusicUtils.cpp  ofxGgmlMusicUtils.h
tests/: CMakeLists.txt  test_external_generation_contract.cpp  test_main.cpp
tools/: musicgen_hf_runner.py
tools/ofxGgmlMusicExternalGenerate/: CMakeLists.txt  main.cpp
tools/ofxGgmlMusicGenerate/: CMakeLists.txt  main.cpp
